--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -66,7 +66,7 @@
 	</script>
 <% end %>
 <%= semantic_form_for @item, :html => {:multipart => true} do |f| %>
-  <%= f.error_messages %>
+  <%= render "share/error_messages", :target => @item %>
   <div id="tabs">
     <ul>
   		<li><a href="#what"><%= t("form.resource.what").html_safe %></a></li>
