--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -2,7 +2,8 @@
   <%= render :partial => "usermenu", :locals => { :meetup => @meetup} %>
 </div>
 <h2><%= @meetup.title %></h2>
-<% if @meetup.locations.size > 0 %>
+<p><%= @meetup.description %></p>  
+<% if @meetup.locations.size > 0 && @locations_json %>
   <div class="sub2cols">
     <div class="subcol1">
       <% if @meetup.events.first and @meetup.events.first.from %>
@@ -20,23 +21,20 @@
             </p>
           <% end %>
         </div>
-      <% end %>
-      <p><%= @meetup.description %></p>    
+      <% end %>  
     </div>
     <div class="subcol2">
-      <% content_for :head do %>   
-       <%= GMap.header(:hl=> params[:locale]) if @map %>
-       <%= @map.to_html if @map %>
-      <% end %>
-      <%= render "share/map" %>
+      <%= render :partial => "share/map", :locals => { :locations => @locations_json } if @locations_json %>
       <h4><%= render :partial => "locations/location", :locals => { :location => @meetup.locations.first } %></h4>
     </div>
   </div>
 <% end %>
 <div class="clear"></div>
-<h2><%= t("meetup.participant", :count => @meetup.users.count) %></h2>
-<ul class="users-list">
-  <% @meetup.users.each do |user| %>
-    <li class="users-list-item"><%= render :partial => "share/usertiny", :locals => { :user => user } %></li>  
-  <% end %>
-</ul>
+<% if @meetup.users && @meetup.users.count > 0 %>
+  <h2><%= t("meetup.participant", :count => @meetup.users.count) %></h2>
+  <ul class="users-list"> 
+    <% @meetup.users.each do |user| %>
+      <li class="users-list-item"><%= render :partial => "share/usertiny", :locals => { :user => user } %></li>  
+    <% end %>
+  </ul>
+<% end %>
