--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,9 @@
-<% semantic_form_for @user, :html => {:class => "shadowed"}  do |f| %>
-  <%= f.error_messages %>
-  <% f.inputs do %>
+<%= semantic_form_for @user, :html => {:class => "shadowed ui-corner-all"}  do |f| %>
+  <%= render "share/error_messages", :target => @user %>
+  <%= f.inputs do %>
     <%= f.input :email %>
   <% end %>
-  <% f.buttons do %>
+  <%= f.buttons do %>
     <%= f.commit_button %>
   <% end %>
 <% end %>
