--- a/app/views/userdetails/_form.html.erb
+++ b/app/views/userdetails/_form.html.erb
@@ -44,8 +44,11 @@
         <li><a href="#interests"><%= t("form.userdetails.personality").html_safe %></a></li>
         <li><a href="#personal"><%= t("form.userdetails.data").html_safe %></a></li>          
         <li><a href="#location"><%= t("form.userdetails.location").html_safe %></a></li>      
-        <li><a href="#avatar"><%= t("form.userdetails.avatar").html_safe %></a></li>
-  	</ul>
+        <li><a href="#avatar"><%= t("form.userdetails.avatar").html_safe %></a></li>    
+      <!--  
+        <li><a href="#configuration"><%= t("form.userdetails.configuration").html_safe %></a></li>
+      -->
+        </ul>
     <div id="interests">
       <%= form.inputs do %>
           <%= form.input :aim_list, :required => false %>
