--- a/public/stylesheets/global/main.css
+++ b/public/stylesheets/global/main.css
@@ -15,6 +15,7 @@
 @import url(font.css);
 @import url(userarea.css);
 @import url(comments.css);
+@import url(pings.css);
 @import url(user.css);
 @import url(events.css);
 @import url(items.css);
