--- a/app/views/pings/show.html.erb
+++ b/app/views/pings/show.html.erb
@@ -3,7 +3,7 @@
     <%= t("ping.of") %> <%= @ping.pingedOn?.html_safe %> 
   </h1>
   <p class="right box ui-corner-all font-small <%= statusTitle(@ping) %>">
-    <%= t "ping.table.status" %>: <%= t statusTitle(@ping) %>
+    <%= t "ping.table.status" %>: <%= t(statusTitle(@ping)).html_safe %>
   </p>
   <p class="font-smaller">
       <%= t("by") %> <%= link_to pingerOf(@ping).login, profile_path(pingerOf(@ping).login) %>
