Userdetails edit on save bug fixed, ground structure of groups integrated

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
 <% if @user %>
   <% if @user == current_user %>
     <div class="button new">
-      <%= link_to t("resource.new"), new_item_path %>
+      <%= link_to t("resource.new"), new_user_item_path %>
     </div>
   <% end %>
 <% end %>             
