--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing group</h1>
-
+<h2><%= t("title.editGroup").html_safe %></h2>
 <%= render 'form' %>
-
-<%= link_to 'Show', @group %> |
-<%= link_to 'Back', groups_path %>
