--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,25 +6,7 @@
   <% end %>
 <% end %>             
 <% if @groups and @groups.size > 0 %>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>User</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @groups.each do |group| %>
-  <tr>
-    <td><%= group.title %></td>
-    <td><%= group.description %></td>
-    <td><%= group.user_id %></td>
-    <td><%= link_to 'Show', group %></td>
-    <td><%= link_to 'Edit', edit_group_path(group) %></td>
-    <td><%= link_to 'Destroy', group, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+    <%= paginated_section @groups do %>
+      <%= render :partial => "grouptable", :locals => { :collection => @groups } if @groups.size > 0 %>
+    <% end %>
 <% end %>
