--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -70,7 +70,7 @@
   		<li><a href="#location"><%= t("form.resource.where").html_safe %></a></li>
   		<li><a href="#when"><%= t("form.resource.when").html_safe %></a></li>
   		<li><a href="#images"><%= t("form.resource.images").html_safe %></a></li>
-  		<!-- <li><a href="#attachments"><%= t("form.resource.attachments").html_safe %></a></li> -->
+                <li><a href="#attachments"><%= t("form.resource.attachments").html_safe %></a></li>
   	</ul>
   	<div id="what" class="tab_content ">
     <%= f.inputs do %>
@@ -131,33 +131,10 @@
     <% end %>  
       <hr class="divider" />
     </div>
-    <div id="attachments" class="tab_content" style="display:none"> 
-      <%= f.inputs do %>  
-        <% d = -1 %>  
-        <li><div class="button new">
-           <%= link_to_add_fields t("item_attachments.new").html_safe, f, :item_attachments %>
-          </div>
-        </li>  
-        <%= f.semantic_fields_for :item_attachments do |attachment_form| %>
-          <% 
-            d += 1
-            if @item.item_attachments and d < @item.item_attachments.count
-              item = Item.find(@item.item_attachments[d].attachment_id) if @item.item_attachments[d].attachment_id
-          %>
-            <% if item %>
-              <div class="attachment">  
-                <p class="attached_item"><%= (image_tag(item.images.first.image.url("small"), :title => item.title, :alt => item.title)) || item.title %></p>
-                <%= render 'item_attachment_fields', :f => attachment_form %>
-                <div class="options">
-                 <%= link_to_function image_tag(("icons/icon_folder_edit.png"), :alt => t("edit"), :title => t("edit")), "edit_field(this)" %> 
-                 <%= link_to_remove_fields image_tag(("icons/icon_folder_remove.png"), :alt => t("remove").html_safe, :title => t("remove").html_safe), attachment_form %> 
-                </div>
-              </div>     
-            <% end %>
-          <% end %>
-        <% end %>
-      <% end %>  
-       <hr class="divider" />
+    <div id="attachments" class="tab_content">
+      <%= render :partial => "items/item_attachments", :locals => { :object => @item, :f => f } %>
+      <hr class="divider" />
+    </div>
   </div>
   <%= f.buttons do %>
     <%= f.commit_button :label => t("save") %>
