--- a/public/stylesheets/global/menues.css
+++ b/public/stylesheets/global/menues.css
@@ -81,12 +81,18 @@
   color:white;
 }
 .pagination span,
+.pagination em,
 .pagination a {
   padding:0.5em;
   height:40px;
-  width:40px;
+  min-width:40px;
   -moz-border-radius: 2px 2px 2px 2px;
+  -webkit-border-radius: 2px 2px 2px 2px;
+  border-radius: 2px 2px 2px 2px;
   border: 1px solid #B8C2B3;
+  -moz-border: 1px solid #B8C2B3;
+  -webkit-border: 1px solid #B8C2B3;
+
   text-decoration:none;
 }
 .pagination span:hover,
