--- a/app/views/pings/index.html.erb
+++ b/app/views/pings/index.html.erb
@@ -6,10 +6,15 @@
   </script>
 <% end %>
 <% if @user %>  
-  <h2><%= t("title.pings.ofUser") %> (<%= @pings_all.size %>)</h2>      
+  <h2><%= t("title.pings.ofUser") %> (<%= @pings_count %>) (<%= @inverse_pings.size %>)</h2>
 <% elsif @item %>
   <h3><%= t("title.pings.of") %> <%=h @item.title %></h3>
 <% end %>
 <%= paginated_section @pings_all do %>
   <%= render :partial => "pingtable", :locals => { :collection => @pings_all } if @pings_all.size > 0 %>
 <% end %>
+
+
+<%# paginated_section @inverse_pings do %>
+  <%# render :partial => "pingtable", :locals => { :collection => @inverse_pings } if @inverse_pings.size > 0 %>
+<%# end %>
