Changing search options in header

--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -8,7 +8,7 @@
       <% end %>
       
       <%= f.text_field :title_cont  %>
-      <div id="searchextended" class="ui-corner-all">
+      <div id="searchextendeder" class="ui-corner-all">
         <h3 class="bold"><%= t("searchOptions").html_safe %></h3>
         <table>
           <tr>
